see if changing base directory fixes problem

--- a/build-specs/porkchop-express-build-spec.yml
+++ b/build-specs/porkchop-express-build-spec.yml
@@ -9,7 +9,6 @@ phases:
       commands:
         - quasar build
 artifacts:
-  baseDirectory: dist/spa
+  baseDirectory: dist
   files: 
     - '**/*'
-
