try to sync from build stage

--- a/build-specs/porkchop-express-build-spec.yml
+++ b/build-specs/porkchop-express-build-spec.yml
@@ -8,6 +8,8 @@ phases:
     build:
       commands:
         - quasar build
-artifacts:
-  files: 
-    - '**/*'
+
+    post_build:
+      commands:
+        - echo PostBuild Phase
+        - aws s3 sync ./dist $S3_BUCKET
