--- a/build-specs/porkchop-express-build-spec.yml
+++ b/build-specs/porkchop-express-build-spec.yml
@@ -9,10 +9,10 @@ phases:
     commands:
       - quasar build
 
-  post_build:
-    commands:
-      - echo PostBuild Phase
-      - aws s3 sync ./dist $S3_BUCKET
-# artifacts:
-#   files: 
-#     - '**/*'
+  # post_build:
+  #   commands:
+  #     - echo PostBuild Phase
+  #     - aws s3 sync ./dist $S3_BUCKET
+artifacts:
+  files: 
+    - '**/*'
